--- a/ShoppingApp/frontend/src/components/menu.css
+++ b/ShoppingApp/frontend/src/components/menu.css
@@ -6,10 +6,11 @@
     display: flex;
 }
 .span__curr{
-    margin-left: 2rem;
+
+    margin-left: 5rem;
 }
 .span__lang{
-    margin-left: 4rem;
+    margin-left: 15rem;
 }
 .span__profile{
     margin-left: 40rem;
@@ -23,7 +24,7 @@
 .cart__itemPrice{
     width: 5rem;
     margin-left: 1rem;
-    margin-right: 2rem;
+    margin-right: 1rem;
 }
 
 /*________________________________________________________________________________________*/
@@ -39,7 +40,7 @@
 }
 
 .hamburger__menu{
-    margin-left: 2rem;
+    margin-right: 2rem;
     width: 20px;
     height:20px;
     display: none;
@@ -81,11 +82,13 @@
   
   .dropdown-content {
     display: none;
+    background-color: honeydew;
     position: absolute;
     width: fit-content;
     font-size: small;
     font-weight: 700;
     color: grey;
+    z-index: 1;
   }
   
   
@@ -122,6 +125,38 @@
     display: table;
     clear: both;
   }
+  .bannerImage{
+      margin: 2rem;
+      width: 100%;
+      height: 45rem;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-image: url('https://cdn.guidingtech.com/media/assets/WordPress-Import/2016/09/_1200x630_crop_center-center_82_none/shutterstock_321562646.png?mtime=1506103922');
+      z-index: 0;
+      color:whitesmoke;
+      text-align: center;
+      font-weight: 700;
+      font-family: Verdana, Geneva, Tahoma, sans-serif;
+  }
+  .bannerText{
+      display: none;
+  }
+  .imageHead{
+
+     font-size: 2rem;
+     padding-top: 5rem;
+  }
+  .imagePara{
+
+      text-align: left;
+      margin:1rem;
+      font-weight: 400;
+  }
+  .imageMore{
+
+      font-size: small;
+      text-decoration: underline;
+  }
 
   @media (max-width:960px){
       .nav{
@@ -132,16 +167,35 @@
       }
       .headingContainer{
           display: flex;
-          justify-content: space-between;
+          justify-content: space-around;
           margin-bottom: 3rem;
       }
       .hamburger__menu{
         display: flex;
-        margin-top: 2rem;
+        margin-top: 2.5rem;
         margin-right: 2rem;
     }
     .mainHeading{
         margin-left: 2%;
         margin-top: 2rem;
     }
+    .bannerImage{
+
+        width:100%;
+        height: 20rem;
+        margin:0;
+        background-repeat: no-repeat;
+        background-image: url('https://i1.wp.com/www.mobileworldlive.com/wp-content/uploads/2018/12/Apple-logo-clouds-shutterstock-650-e1565266431121.jpg?fit=650%2C401&ssl=1');
+    }
+    .bannerText{
+        display: block;
+                
+
+    }
+    .imagePara{
+        overflow-wrap: break-word;
+        word-wrap: break-word;
+        hyphens: auto;
+    }
+    
   }
